refactor: udate name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Web Badge",
-  "name": "Web Badge",
+  "short_name": "Shield Icons",
+  "name": "Shield Icons",
   "icons": [
     {
       "src": "./logo_x128.png",
